--- a/Regexs/next/.eslintrc
+++ b/Regexs/next/.eslintrc
@@ -23,6 +23,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/unbound-method": "off",
+    "import/prefer-default-export": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/button-has-type": "off",
     "react/destructuring-assignment": "off",
