--- a/Regexs/next/.eslintrc
+++ b/Regexs/next/.eslintrc
@@ -25,6 +25,9 @@
     "@typescript-eslint/unbound-method": "off",
     "import/prefer-default-export": "off",
     "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/interactive-supports-focus": "off",
+    "jsx-a11y/anchor-is-valid": "off",
     "react/button-has-type": "off",
     "react/destructuring-assignment": "off",
     "react/jsx-props-no-spreading": "off",
