--- a/Regexs/next/package.json
+++ b/Regexs/next/package.json
@@ -13,7 +13,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "doc": "jsdoc -c jsdoc.json",
-    "json-server": "json-server --watch db.json --port 3004"
+    "json-server": "json-server --watch db.json --port 3004",
+    "check-dependency-circular": "madge --circular src",
+    "make-dependency-graph": "madge --dot --image dependency/dependencygraph.svg src"
   },
   "repository": {
     "type": "git",
@@ -78,6 +80,7 @@
     "jsdoc": "^3.6.3",
     "json-server": "^0.15.1",
     "lint-staged": "^10.0.1",
+    "madge": "^3.7.0",
     "npm-run-all": "^4.1.5",
     "post-npm-install": "^2.0.0",
     "prettier": "^1.19.1",
